(lang dune 3.14)

(name sys_util)

(generate_opam_files true)

(source
 (github filipeom/sys-util))

(authors "Filipe Marques")

(maintainers "Filipe Marques")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sys_util)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
